--- a/front/angular.json
+++ b/front/angular.json
@@ -64,6 +64,9 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options": {
+            "proxyConfig": "src/proxy.config.json"  
+          },
           "configurations": {
             "production": {
               "browserTarget": "front:build:production"
